Update newsletter signup form hidden input values

--- a/src/components/NewsletterSignup.astro
+++ b/src/components/NewsletterSignup.astro
@@ -44,7 +44,7 @@
         </label>
       </div>
 
-      <input type="hidden" name="LASTNAME" />
+      <input type="hidden" name="LASTNAME" value="" />
       <input type="hidden" name="submitType" value="optinCustomView" />
       <input type="hidden" name="emailReportId" value="" />
       <input type="hidden" name="formType" value="QuickForm" />
@@ -56,8 +56,8 @@
       <input type="hidden" name="zctd" value="113d34b06f17e37a9" />
       <input type="hidden" name="document_domain" value="" />
       <input type="hidden" name="zc_Url" value="zcsub-cmpzourl.maillist-manage.com" />
-      <input type="hidden" name="new_optin_response_in" value="2" />
-      <input type="hidden" name="duplicate_optin_response_in" value="2" />
+      <input type="hidden" name="new_optin_response_in" value="1" />
+      <input type="hidden" name="duplicate_optin_response_in" value="1" />
       <input type="hidden" name="zc_trackCode" value="ZCFORMVIEW" />
       <input
         type="hidden"
