Simplify newsletter signup form markup

--- a/src/components/NewsletterSignup.astro
+++ b/src/components/NewsletterSignup.astro
@@ -11,10 +11,7 @@
     </p>
   </div>
   <div>
-    <form
-      method="POST"
-      action="https://zcsub-cmpzourl.maillist-manage.com/weboptin.zc"
-    >
+    <form method="POST" action="https://zcsub-cmpzourl.maillist-manage.com/weboptin.zc">
       <div class="flex flex-col lg:flex-row flex-wrap gap-2 lg:gap-4 mb-4">
         <input
           type="text"
