Fix Open Graph URL generation in Skeleton layout

--- a/src/layouts/Skeleton.astro
+++ b/src/layouts/Skeleton.astro
@@ -19,7 +19,7 @@ const { title, description, ogImage = OpenGraph.src, ogType = "website" } = Astr
 
 const siteUrl = getSiteUrl(Astro.url);
 const ogImageUrl = new URL(ogImage, siteUrl);
-const ogUrl = new URL(Astro.url, siteUrl);
+const ogUrl = new URL(Astro.url.pathname, siteUrl);
 ---
 
 <!doctype html>
