--- a/src/layouts/Skeleton.astro
+++ b/src/layouts/Skeleton.astro
@@ -3,6 +3,7 @@ import TopNav from "../components/TopNav.astro";
 import Footer from "../components/Footer.astro";
 import OpenGraph from "../assets/images/opengraph.png";
 import "../styles/global.css";
+import { IS_PRODUCTION, getSiteUrl } from "../data/global";
 
 interface Props {
   title: string;
@@ -15,12 +16,7 @@ const { title, description, ogImage = OpenGraph.src, ogType = "website" } = Astr
 
 const siteUrl = getSiteUrl(Astro.url);
 const ogImageUrl = new URL(ogImage, siteUrl);
-const ogUrl = new URL(Astro.url, siteUrl);
-const IS_PRODUCTION = import.meta.env.PROD;
-
-function getSiteUrl(url: URL) {
-  return import.meta.env.SITE ?? `${url.protocol}//${url.host}`;
-}
+const ogUrl = new URL(Astro.url.pathname, siteUrl);
 ---
 
 <!doctype html>
