Update Reddit link in Footer component

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -43,7 +43,7 @@ const currentYear = new Date().getFullYear();
           <a href="https://github.com/topics/veraid">
             <div set:html={GithubIcon} />
           </a>
-          <a href="https://www.reddit.com/r/VeraId/about/">
+          <a href="https://www.reddit.com/r/VeraId/">
             <div set:html={RedditIcon} />
           </a>
         </div>
