Update Zoho privacy policy link in newsletter signup

--- a/src/components/NewsletterSignup.astro
+++ b/src/components/NewsletterSignup.astro
@@ -16,7 +16,7 @@
     </h2>
     <p>
       Unsubscribe at anytime. We'll only share your data with Zoho, where it will be processed
-      according to their <a href="https://www.zoho.com/mail/help/usage-policy.html">policies</a>.
+      according to their <a href="https://www.zoho.com/privacy.html">policies</a>.
     </p>
   </div>
   <div>
