Update typography and font styles
- Replace Inter with Noto Sans for body and headings of page layout
- Add JetBrainsMono ExtraBold font face
- Adjust heading sizes and font weights
- Modify inline code styling
- Update Google Fonts link to include Noto Sans

--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -34,18 +34,21 @@ const articleClasses = [
   "text-sm",
   "sm:text-sm",
   "leading-normal",
-  "font-['Inter']",
+  "font-['Noto_Sans']",
   "font-normal",
   "text-neutral-300",
   "prose-headings:text-white",
+  "prose-headings:!font-[Noto_Sans]",
+  "prose-headings:!font-semibold",
   "prose-h1:mb-4",
   "prose-h2:text-3xl",
   "prose-h2:mt-10",
   "prose-h2:mb-4",
-  "prose-h3:text-xl",
+  "prose-h3:text-2xl",
   "prose-h3:mt-8",
   "prose-h3:mb-2",
-  "prose-h4:mt-3",
+  "prose-h4:text-xl",
+  "prose-h4:mt-5",
   "prose-h4:mb-1",
   "prose-code:text-white",
   "prose-a:text-green-300",
@@ -54,13 +57,12 @@ const articleClasses = [
   "prose-a:hover:underline",
 
   // Inline code
-  "[&_:not(pre)>code]:bg-neutral-900",
+  "[&_:not(pre)>code]:bg-neutral-800",
   "[&_:not(pre)>code]:py-0.5",
   "[&_:not(pre)>code]:px-1",
   "[&_:not(pre)>code]:border",
   "[&_:not(pre)>code]:border-neutral-700",
   "[&_:not(pre)>code]:rounded-sm",
-  "[&_:not(pre)>code]:text-neutral-400",
   "[&_:not(pre)>code]:text-xs",
   "[&_:not(pre)>code]:font-mono",
   "[&_:not(pre)>code]:break-words",
