--- a/src/components/Homepage/Hero.astro
+++ b/src/components/Homepage/Hero.astro
@@ -1,8 +1,7 @@
 ---
 import { Image } from "astro:assets";
-import Carousel from "./Carousel.astro";
+import Carousel from "./Carousel/index.astro";
 import patternSvg from "../../assets/images/pattern.svg";
-import Banner from "./Banner.astro";
 ---
 
 <section class="relative px-4 md:px-6 md:pt-12 pt-8 md:pb-14 pb-9">
