--- a/src/components/Homepage/Carousel/index.astro
+++ b/src/components/Homepage/Carousel/index.astro
@@ -61,23 +61,6 @@ import "./Scrolling.css";
   </div>
 </div>
 
-<script>
-  const carousel = document.getElementById("carousel");
-  let isPaused = false;
-
-  const mediaQuery = window.matchMedia("(hover: hover)");
-  if (mediaQuery.matches) {
-    carousel?.addEventListener("mouseenter", () => {
-      carousel.classList.add("carousel-paused");
-    });
-
-    carousel?.addEventListener("mouseleave", () => {
-      carousel.classList.remove("carousel-paused");
-    });
-  }
-
-  carousel?.addEventListener("click", () => {
-    isPaused = !isPaused;
-    carousel.classList.toggle("carousel-paused", isPaused);
-  });
+<script type="module">
+  import "./Pause.js";
 </script>
