--- a/src/components/Homepage/Carousel/index.astro
+++ b/src/components/Homepage/Carousel/index.astro
@@ -26,8 +26,7 @@ import "./Scrolling.css";
             bottomRightWidth={50}
             imageWidth={190}
             imageHeight={90}
-            paddingLeft={16}
-            paddingRight={16}
+            padding={16}
           />
           <CarouselItem message="You shall not pass!" source="gandalf@ring.company" />
           <CarouselItem
@@ -37,9 +36,8 @@ import "./Scrolling.css";
             imageAlt="XKCD comic"
             bottomLeftWidth={40}
             bottomRightWidth={40}
-            paddingLeft={0}
-            paddingRight={0}
             imageWidth={250}
+            padding={0}
           />
           <CarouselItem message="Rrrruuuurrr" source="chewbacca@kashyyyk.space" />
           <CarouselItem
@@ -51,8 +49,7 @@ import "./Scrolling.css";
             bottomRightWidth={100}
             imageWidth={300}
             imageHeight={90}
-            paddingLeft={16}
-            paddingRight={16}
+            padding={16}
           />
           <CarouselItem message="Winter is coming" source="jon@nightswatch.mil" />
         </div>
@@ -61,6 +58,6 @@ import "./Scrolling.css";
   </div>
 </div>
 
-<script type="module">
+<script>
   import "./Pause.js";
 </script>
