Add back carousel container ID for  JavaScript interaction

--- a/src/components/Homepage/Carousel/index.astro
+++ b/src/components/Homepage/Carousel/index.astro
@@ -6,8 +6,8 @@ import codeImage from "../../../assets/images/code.png";
 import "./Scrolling.css";
 ---
 
-<div class="mt-4 md:mt-12 relative overflow-hidden w-full">
-  <div class="carousel-scroll flex gap-8 items-center">
+<div class="mt-6 md:mt-12 relative overflow-hidden w-full">
+  <div id="carousel" class="carousel-scroll flex gap-8 items-center">
     {
       [...Array(2)].map(() => (
         <div class="flex gap-8 sm:gap-16 items-center min-w-max pr-4 sm:pr-8">
