Refactor carousel pause functionality
- Replace Pause.js with a new PauseController component using React hooks
- Improve event handling for mouse and click interactions
- Clean up code by removing the old Pause.js file

--- a/src/components/Homepage/Carousel/index.astro
+++ b/src/components/Homepage/Carousel/index.astro
@@ -4,6 +4,7 @@ import xkcdImage from "../../../assets/images/xkcd.svg";
 import audioGif from "../../../assets/images/audio.gif";
 import codeImage from "../../../assets/images/code.png";
 import "./Scrolling.css";
+import PauseController from "./PauseController";
 ---
 
 <div class="mt-6 md:mt-12 relative overflow-hidden w-full">
@@ -49,6 +50,4 @@ import "./Scrolling.css";
   </div>
 </div>
 
-<script>
-  import "./Pause.js";
-</script>
+<PauseController client:load />
