Reduce font size for mobile devices

--- a/src/components/Homepage/Carousel/Item.astro
+++ b/src/components/Homepage/Carousel/Item.astro
@@ -33,7 +33,7 @@ const imageAlt = type === "image" ? (rest as ImageItem).imageAlt : "";
 
 <div class="relative pb-3">
   <div
-    class="pixelated-frame pt-3 text-center mx-auto bg-black text-white font-semibold font-mono text-sm"
+    class="pixelated-frame pt-3 text-center mx-auto bg-black text-white font-semibold font-mono text-xs lg:text-sm"
     style={`--bottom-segment-width: ${bottomWidth}rem; padding-left: ${padding}rem; padding-right: ${padding}rem;`}
   >
     <!-- Frame parts -->
